Fix up breadcrumb spacing

--- a/src/components/Breadcrumb/Breadcrumb.css
+++ b/src/components/Breadcrumb/Breadcrumb.css
@@ -27,9 +27,12 @@
 
 .link {
   display: inline-block;
+  font-size: 12px;
+  margin-right: 8px;
+  text-transform: uppercase;
 }
 
 .trail:not(:last-child)::after {
   content: '\003e';
-  margin: 0 8px;
+  margin-left: 8px;
 }
